[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
brass_engine = { path = "../Brass_Engine" }
pollster = "0.3"
env_logger = "0.11"
winit        = "0.29"
wgpu         = "0.20"
glam         = "0.27"
bytemuck     = { version = "1", features = ["derive"] }

log          = "0.4"

